[package]
name = "ecn-capture"
version = "0.1.0"
edition = "2018"

[lib]
name ="ecn_capture"
crate-type = ["rlib", "staticlib"]

[dependencies]
clap = "2.33.3"
log = "0.4.16"
env_logger = "0.9.0"
pnet = "0.28.0"
pcap = "0.8.1"
time = "0.1"
maxminddb = "0.17.0"
postgres = "0.19.1"
libc = "0.2.101"
rand = "0.8.5"
memuse = "0.2.0"